# datasec

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
datasec/: __init__.py  audit_report.py  breach_monitor.py  breach_scanner.py  encryptor.py  hidden_volume.py  main.py  metadata_stripper.py  osint_scanner.py  password_auditor.py  pm_parser.py  status_report.py
services/: com.datasec.monitor.plist  datasec-monitor.service  install-service.sh  install-task.ps1  remove-task.ps1
tests/: test_datasec.py  test_new_features.py
